trunk/pywiimote/wiiuse.py


# wiiuse.h:616
wiiuse_cleanup = _lib.wiiuse_cleanup
wiiuse_cleanup.restype = None
wiiuse_cleanup.argtypes = [POINTER(POINTER(struct_wiimote_t)), c_int]

# wiiuse.h:617
wiiuse_rumble = _lib.wiiuse_rumble
wiiuse_rumble.restype = None
wiiuse_rumble.argtypes = [POINTER(struct_wiimote_t), c_int]

# wiiuse.h:618
wiiuse_toggle_rumble = _lib.wiiuse_toggle_rumble
wiiuse_toggle_rumble.restype = None
wiiuse_toggle_rumble.argtypes = [POINTER(struct_wiimote_t)]

# wiiuse.h:619
wiiuse_set_leds = _lib.wiiuse_set_leds
wiiuse_set_leds.restype = None
wiiuse_set_leds.argtypes = [POINTER(struct_wiimote_t), c_int]

# wiiuse.h:620
wiiuse_motion_sensing = _lib.wiiuse_motion_sensing
wiiuse_motion_sensing.restype = None
wiiuse_motion_sensing.argtypes = [POINTER(struct_wiimote_t), c_int]

# wiiuse.h:621
wiiuse_read_data = _lib.wiiuse_read_data
wiiuse_read_data.restype = c_int
wiiuse_read_data.argtypes = [POINTER(struct_wiimote_t), POINTER(byte), c_uint, c_ushort]

# wiiuse.h:622
wiiuse_write_data = _lib.wiiuse_write_data
wiiuse_write_data.restype = c_int
wiiuse_write_data.argtypes = [POINTER(struct_wiimote_t), c_uint, POINTER(byte), byte]

# wiiuse.h:623
wiiuse_status = _lib.wiiuse_status
wiiuse_status.restype = None
wiiuse_status.argtypes = [POINTER(struct_wiimote_t)]

# wiiuse.h:624
wiiuse_get_by_id = _lib.wiiuse_get_by_id
wiiuse_get_by_id.restype = POINTER(struct_wiimote_t)
wiiuse_get_by_id.argtypes = [POINTER(POINTER(struct_wiimote_t)), c_int, c_int]

# wiiuse.h:625
wiiuse_set_flags = _lib.wiiuse_set_flags
wiiuse_set_flags.restype = c_int
wiiuse_set_flags.argtypes = [POINTER(struct_wiimote_t), c_int, c_int]

# wiiuse.h:626
wiiuse_set_smooth_alpha = _lib.wiiuse_set_smooth_alpha
wiiuse_set_smooth_alpha.restype = c_float
wiiuse_set_smooth_alpha.argtypes = [POINTER(struct_wiimote_t), c_float]

# wiiuse.h:627
wiiuse_set_bluetooth_stack = _lib.wiiuse_set_bluetooth_stack
wiiuse_set_bluetooth_stack.restype = None
wiiuse_set_bluetooth_stack.argtypes = [POINTER(POINTER(struct_wiimote_t)), c_int, win_bt_stack_t]

# wiiuse.h:628
wiiuse_set_orient_threshold = _lib.wiiuse_set_orient_threshold
wiiuse_set_orient_threshold.restype = None
wiiuse_set_orient_threshold.argtypes = [POINTER(struct_wiimote_t), c_float]

# wiiuse.h:629
wiiuse_resync = _lib.wiiuse_resync
wiiuse_resync.restype = None
wiiuse_resync.argtypes = [POINTER(struct_wiimote_t)]

# wiiuse.h:630
wiiuse_set_timeout = _lib.wiiuse_set_timeout
wiiuse_set_timeout.restype = None
wiiuse_set_timeout.argtypes = [POINTER(POINTER(struct_wiimote_t)), c_int, byte, byte]

# wiiuse.h:631
wiiuse_set_accel_threshold = _lib.wiiuse_set_accel_threshold
wiiuse_set_accel_threshold.restype = None
wiiuse_set_accel_threshold.argtypes = [POINTER(struct_wiimote_t), c_int]

# wiiuse.h:634
wiiuse_find = _lib.wiiuse_find
wiiuse_find.restype = c_int
wiiuse_find.argtypes = [POINTER(POINTER(struct_wiimote_t)), c_int, c_int]

# wiiuse.h:635
wiiuse_connect = _lib.wiiuse_connect
wiiuse_connect.restype = c_int
wiiuse_connect.argtypes = [POINTER(POINTER(struct_wiimote_t)), c_int]

# wiiuse.h:636
wiiuse_disconnect = _lib.wiiuse_disconnect
wiiuse_disconnect.restype = None
wiiuse_disconnect.argtypes = [POINTER(struct_wiimote_t)]

# wiiuse.h:639
wiiuse_poll = _lib.wiiuse_poll
wiiuse_poll.restype = c_int
wiiuse_poll.argtypes = [POINTER(POINTER(struct_wiimote_t)), c_int]

# wiiuse.h:642
wiiuse_set_ir = _lib.wiiuse_set_ir
wiiuse_set_ir.restype = None
wiiuse_set_ir.argtypes = [POINTER(struct_wiimote_t), c_int]

# wiiuse.h:643
wiiuse_set_ir_vres = _lib.wiiuse_set_ir_vres
wiiuse_set_ir_vres.restype = None
wiiuse_set_ir_vres.argtypes = [POINTER(struct_wiimote_t), c_uint, c_uint]

# wiiuse.h:644
wiiuse_set_ir_position = _lib.wiiuse_set_ir_position
wiiuse_set_ir_position.restype = None
wiiuse_set_ir_position.argtypes = [POINTER(struct_wiimote_t), ir_position_t]

# wiiuse.h:645
wiiuse_set_aspect_ratio = _lib.wiiuse_set_aspect_ratio
wiiuse_set_aspect_ratio.restype = None
wiiuse_set_aspect_ratio.argtypes = [POINTER(struct_wiimote_t), aspect_t]

# wiiuse.h:646
wiiuse_set_ir_sensitivity = _lib.wiiuse_set_ir_sensitivity
wiiuse_set_ir_sensitivity.restype = None
wiiuse_set_ir_sensitivity.argtypes = [POINTER(struct_wiimote_t), c_int]

# wiiuse.h:649
wiiuse_set_nunchuk_orient_threshold = _lib.wiiuse_set_nunchuk_orient_threshold
wiiuse_set_nunchuk_orient_threshold.restype = None
wiiuse_set_nunchuk_orient_threshold.argtypes = [POINTER(struct_wiimote_t), c_float]

# wiiuse.h:650
wiiuse_set_nunchuk_accel_threshold = _lib.wiiuse_set_nunchuk_accel_threshold
wiiuse_set_nunchuk_accel_threshold.restype = None
wiiuse_set_nunchuk_accel_threshold.argtypes = [POINTER(struct_wiimote_t), c_int]


__all__ = ['WIIMOTE_LED_NONE', 'WIIMOTE_LED_1', 'WIIMOTE_LED_2',
'WIIMOTE_LED_3', 'WIIMOTE_LED_4', 'WIIMOTE_BUTTON_TWO', 'WIIMOTE_BUTTON_ONE',
'WIIMOTE_BUTTON_B', 'WIIMOTE_BUTTON_A', 'WIIMOTE_BUTTON_MINUS',
'WIIMOTE_BUTTON_ZACCEL_BIT6', 'WIIMOTE_BUTTON_ZACCEL_BIT7',
'WIIMOTE_BUTTON_HOME', 'WIIMOTE_BUTTON_LEFT', 'WIIMOTE_BUTTON_RIGHT',
'WIIMOTE_BUTTON_DOWN', 'WIIMOTE_BUTTON_UP', 'WIIMOTE_BUTTON_PLUS',
'WIIMOTE_BUTTON_ZACCEL_BIT4', 'WIIMOTE_BUTTON_ZACCEL_BIT5',
'WIIMOTE_BUTTON_UNKNOWN', 'WIIMOTE_BUTTON_ALL', 'NUNCHUK_BUTTON_Z',
'NUNCHUK_BUTTON_C', 'NUNCHUK_BUTTON_ALL', 'CLASSIC_CTRL_BUTTON_UP',
'CLASSIC_CTRL_BUTTON_LEFT', 'CLASSIC_CTRL_BUTTON_ZR', 'CLASSIC_CTRL_BUTTON_X',
'CLASSIC_CTRL_BUTTON_A', 'CLASSIC_CTRL_BUTTON_Y', 'CLASSIC_CTRL_BUTTON_B',
'CLASSIC_CTRL_BUTTON_ZL', 'CLASSIC_CTRL_BUTTON_FULL_R',
'CLASSIC_CTRL_BUTTON_PLUS', 'CLASSIC_CTRL_BUTTON_HOME',
'CLASSIC_CTRL_BUTTON_MINUS', 'CLASSIC_CTRL_BUTTON_FULL_L',
'CLASSIC_CTRL_BUTTON_DOWN', 'CLASSIC_CTRL_BUTTON_RIGHT',
'CLASSIC_CTRL_BUTTON_ALL', 'GUITAR_HERO_3_BUTTON_STRUM_UP',
'GUITAR_HERO_3_BUTTON_YELLOW', 'GUITAR_HERO_3_BUTTON_GREEN',
'GUITAR_HERO_3_BUTTON_BLUE', 'GUITAR_HERO_3_BUTTON_RED',
'GUITAR_HERO_3_BUTTON_ORANGE', 'GUITAR_HERO_3_BUTTON_PLUS',
'GUITAR_HERO_3_BUTTON_MINUS', 'GUITAR_HERO_3_BUTTON_STRUM_DOWN',
'GUITAR_HERO_3_BUTTON_ALL', 'WIIUSE_SMOOTHING', 'WIIUSE_CONTINUOUS',
'WIIUSE_ORIENT_THRESH', 'WIIUSE_INIT_FLAGS', 'WIIUSE_ORIENT_PRECISION',
'EXP_NONE', 'EXP_NUNCHUK', 'EXP_CLASSIC', 'EXP_GUITAR_HERO_3',
'ir_position_t', 'WIIUSE_IR_ABOVE', 'WIIUSE_IR_BELOW', 'MAX_PAYLOAD', 'byte',
'sbyte', 'wiiuse_read_cb', 'vec2b_t', 'vec3b_t', 'vec3f_t', 'orient_t',
'gforce_t', 'accel_t', 'ir_dot_t', 'aspect_t', 'WIIUSE_ASPECT_4_3',
'WIIUSE_ASPECT_16_9', 'ir_t', 'joystick_t', 'nunchuk_t', 'classic_ctrl_t',
'guitar_hero_3_t', 'expunion', 'expansion_t', 'win_bt_stack_t',
'WIIUSE_STACK_UNKNOWN', 'WIIUSE_STACK_MS', 'WIIUSE_STACK_BLUESOLEIL',
'wiimote_state_t', 'WIIUSE_EVENT_TYPE', 'WIIUSE_NONE', 'WIIUSE_EVENT',
'WIIUSE_STATUS', 'WIIUSE_CONNECT', 'WIIUSE_DISCONNECT',
'WIIUSE_UNEXPECTED_DISCONNECT', 'WIIUSE_READ_DATA', 'WIIUSE_NUNCHUK_INSERTED',
'WIIUSE_NUNCHUK_REMOVED', 'WIIUSE_CLASSIC_CTRL_INSERTED',
'WIIUSE_CLASSIC_CTRL_REMOVED', 'WIIUSE_GUITAR_HERO_3_CTRL_INSERTED',
'WIIUSE_GUITAR_HERO_3_CTRL_REMOVED', 'wiimote', 'wiiuse_version',
'wiiuse_init', 'wiiuse_disconnected', 'wiiuse_cleanup', 'wiiuse_rumble',
'wiiuse_toggle_rumble', 'wiiuse_set_leds', 'wiiuse_motion_sensing',
'wiiuse_read_data', 'wiiuse_write_data', 'wiiuse_status', 'wiiuse_get_by_id',
'wiiuse_set_flags', 'wiiuse_set_smooth_alpha', 'wiiuse_set_bluetooth_stack',
'wiiuse_set_orient_threshold', 'wiiuse_resync', 'wiiuse_set_timeout',
'wiiuse_set_accel_threshold', 'wiiuse_find', 'wiiuse_connect',
'wiiuse_disconnect', 'wiiuse_poll', 'wiiuse_set_ir', 'wiiuse_set_ir_vres',
'wiiuse_set_ir_position', 'wiiuse_set_aspect_ratio',
'wiiuse_set_ir_sensitivity', 'wiiuse_set_nunchuk_orient_threshold',
'wiiuse_set_nunchuk_accel_threshold']
